--- a/externals/CMakeLists.txt
+++ b/externals/CMakeLists.txt
@@ -1,2 +1,3 @@
 add_subdirectory( binaryen )
+add_subdirectory( boringssl )
 install(DIRECTORY magic_get/include/boost DESTINATION ${CMAKE_INSTALL_FULL_INCLUDEDIR})
