--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -12,6 +12,6 @@ add_subdirectory(txn_test_gen_plugin)
 add_subdirectory(faucet_testnet_plugin)
 add_subdirectory(mongo_db_plugin)
 add_subdirectory(account_api_plugin)
-
+add_subdirectory(producer_uranus_plugin)
 # Forward variables to top level so packaging picks them up
 set(CPACK_DEBIAN_PACKAGE_DEPENDS ${CPACK_DEBIAN_PACKAGE_DEPENDS} PARENT_SCOPE)
