modifed producer_uranus_plugin

--- a/plugins/producer_uranus_plugin/CMakeLists.txt
+++ b/plugins/producer_uranus_plugin/CMakeLists.txt
@@ -8,8 +8,16 @@ add_library( producer_uranus_plugin
              security.cpp
              ${HEADERS} )
 
+FIND_PACKAGE(Boost 1.66 REQUIRED COMPONENTS
+        system
+        chrono
+        log
+        iostreams
+        thread
+        filesystem)
+
 include_directories( "../../externals/boringssl/include" )
-target_link_libraries( producer_uranus_plugin  appbase fc fiat crypto)
+target_link_libraries( producer_uranus_plugin  appbase fc fiat crypto ${Boost_LIBRARIES})
 target_include_directories( producer_uranus_plugin PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include" )
 
 
