use producer_uranus_plugin

--- a/Docker/config.ini
+++ b/Docker/config.ini
@@ -84,7 +84,7 @@ private-key = ["UTR6MRyAjQq8ud7hVNYcfnVPJqcVpscN5So8BhtHuGYqET5GDW5CV","5KQwrPbw
 # Plugin(s) to enable, may be specified multiple times
 # plugin =
 # Plugin(s) to enable, may be specified multiple times
-plugin = ultrainio::producer_plugin
+plugin = ultrainio::producer_uranus_plugin
 plugin = ultrainio::chain_api_plugin
 plugin = ultrainio::wallet_api_plugin
 plugin = ultrainio::account_history_api_plugin
