Monitor plugin phase

--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -1,6 +1,8 @@
 add_subdirectory(bnet_plugin)
 add_subdirectory(net_plugin)
 add_subdirectory(net_api_plugin)
+add_subdirectory(monitor_plugin)
+add_subdirectory(monitor_api_plugin)
 add_subdirectory(http_plugin)
 add_subdirectory(http_client_plugin)
 add_subdirectory(chain_plugin)
