test ed25519 and eos sign algorithm

--- a/tests/crypto/CMakeLists.txt
+++ b/tests/crypto/CMakeLists.txt
@@ -6,4 +6,4 @@ target_link_libraries( bls_test ultrainio_crypto )
 add_executable( vrf_test
         VrfTest.cpp)
 
-target_link_libraries( vrf_test ultrainio_crypto )
+target_link_libraries( vrf_test ultrainio_crypto fc)
