add Signature sign/verify

--- a/tests/uranus/CMakeLists.txt
+++ b/tests/uranus/CMakeLists.txt
@@ -1,4 +1,9 @@
-add_executable( urauns_test
-        main.cpp)
+add_executable( votersystem_test
+        VoterSystemTest.cpp)
 
-target_link_libraries( urauns_test ultrainio_crypto ultrainio_uranus )
+target_link_libraries( votersystem_test ultrainio_crypto ultrainio_uranus )
+
+add_executable( signervalidator_test
+        SignerValidatorTest.cpp)
+
+target_link_libraries( signervalidator_test ultrainio_crypto ultrainio_uranus )
