keypair generator tool

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -221,7 +221,7 @@ add_subdirectory( core )
 add_subdirectory( crypto )
 add_subdirectory( log )
 add_subdirectory( tests )
-#add_subdirectory( tools )
+add_subdirectory( tools )
 add_subdirectory( vendor )
 #add_subdirectory( unittests )
 add_subdirectory( uranus )
