1. refactor vrf 2. rename uranus to rpos 3. new stake strategy

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -218,13 +218,13 @@ add_subdirectory( scripts )
 # ultrainio
 add_subdirectory( base )
 add_subdirectory( core )
+add_subdirectory( consensus )
 add_subdirectory( crypto )
 add_subdirectory( log )
 add_subdirectory( tests )
 add_subdirectory( tools )
 add_subdirectory( vendor )
-#add_subdirectory( unittests )
-add_subdirectory( uranus )
+add_subdirectory( unittests )
 add_subdirectory( debian )
 
 install_directory_permissions(DIRECTORY ${CMAKE_INSTALL_FULL_SYSCONFDIR}/ultrainio)
