--- a/plugins/monitor_plugin/CMakeLists.txt
+++ b/plugins/monitor_plugin/CMakeLists.txt
@@ -3,5 +3,5 @@ add_library( monitor_plugin
              monitor_plugin.cpp
              ${HEADERS} )
 
-target_link_libraries( monitor_plugin appbase fc ultrainio_uranus)
+target_link_libraries( monitor_plugin appbase fc ultrainio_rpos)
 target_include_directories( monitor_plugin PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include")
