Monitor plugin, report node info to central server.

--- a/plugins/monitor_plugin/CMakeLists.txt
+++ b/plugins/monitor_plugin/CMakeLists.txt
@@ -1,7 +1,8 @@
 file(GLOB HEADERS "include/ultrainio/monitor_plugin/*.hpp")
 add_library( monitor_plugin
              monitor_plugin.cpp
+             httpc.cpp
              ${HEADERS} )
 
-target_link_libraries( monitor_plugin appbase fc ultrainio_rpos)
+target_link_libraries( monitor_plugin appbase fc http_plugin ultrainio_rpos)
 target_include_directories( monitor_plugin PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include")
