1. use account name instead of public key 2. refactor VoterSystem and Genesis startup 3. add unit test for VoterSystem and Genesis startup

--- a/consensus/rpos/CMakeLists.txt
+++ b/consensus/rpos/CMakeLists.txt
@@ -1,6 +1,7 @@
 file(GLOB HEADERS "include/rpos/*.h")
 add_library( ultrainio_rpos
         src/BlockMessage.cpp
+        src/KeyKeeper.cpp
         src/MessageBuilder.cpp
         src/MessageManager.cpp
         src/Node.cpp
