tool also generate account

--- a/unittests/rpos/CMakeLists.txt
+++ b/unittests/rpos/CMakeLists.txt
@@ -21,3 +21,27 @@ add_test(NAME proof_unittest COMMAND proof_unittest WORKING_DIRECTORY ${CMAKE_BI
 #target_link_libraries( votersystem_unittest ultrainio_rpos )
 
 #add_test(NAME votersystem_unittest COMMAND votersystem_unittest WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
+
+### MessageManager
+add_executable( messagemanager_unittest
+        MessageManagerTest.cpp)
+
+target_link_libraries( messagemanager_unittest ultrainio_rpos )
+
+add_test(NAME messagemanager_unittest COMMAND messagemanager_unittest WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
+
+### PhaseMessage
+add_executable( phasemessage_unittest
+        PhaseMessageTest.cpp)
+
+target_link_libraries( phasemessage_unittest ultrainio_rpos )
+
+add_test(NAME phasemessage_unittest COMMAND phasemessage_unittest WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
+
+### BlockMessage
+add_executable( blockmessage_unittest
+        BlockMessageTest.cpp)
+
+target_link_libraries( blockmessage_unittest ultrainio_rpos )
+
+add_test(NAME blockmessage_unittest COMMAND blockmessage_unittest WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
