abstract Genesis class

--- a/consensus/rpos/CMakeLists.txt
+++ b/consensus/rpos/CMakeLists.txt
@@ -2,6 +2,7 @@ file(GLOB HEADERS "include/rpos/*.h")
 add_library( ultrainio_rpos
         src/BlockMessage.cpp
         src/Config.cpp
+        src/Genesis.cpp
         src/KeyKeeper.cpp
         src/MessageBuilder.cpp
         src/MessageManager.cpp
