--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -3,5 +3,5 @@ add_library( ultrainio_core
              src/Block.cpp
         ${HEADERS} )
 
-target_link_libraries( ultrainio_core ultrainio_chain ultrainio_crypto ultrainio_log )
+target_link_libraries( ultrainio_core ultrainio_chain ultrainio_crypto )
 target_include_directories( ultrainio_core PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include" )
