Optimize http client.

--- a/plugins/monitor_plugin/CMakeLists.txt
+++ b/plugins/monitor_plugin/CMakeLists.txt
@@ -1,7 +1,7 @@
 file(GLOB HEADERS "include/ultrainio/monitor_plugin/*.hpp")
 add_library( monitor_plugin
              monitor_plugin.cpp
-             httpc.cpp
+             httpc_only_send.cpp
              ${HEADERS} )
 
 target_link_libraries( monitor_plugin appbase fc http_plugin ultrainio_rpos)
