add world states files manager

--- a/programs/CMakeLists.txt
+++ b/programs/CMakeLists.txt
@@ -4,3 +4,4 @@ add_subdirectory( kultraind )
 add_subdirectory( ultrainio-launcher )
 add_subdirectory( ultrainio-applesedemo )
 add_subdirectory( ultrainio-abigen )
+add_subdirectory( ultrainio-ws )
