--- a/programs/CMakeLists.txt
+++ b/programs/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_subdirectory( nodultrain )
 add_subdirectory( clultrain )
 add_subdirectory( kultraind )
+add_subdirectory( wssultrain )
 add_subdirectory( ultrainio-launcher )
 add_subdirectory( ultrainio-applesedemo )
 add_subdirectory( ultrainio-abigen )
