--- a/contracts/CMakeLists.txt
+++ b/contracts/CMakeLists.txt
@@ -13,6 +13,7 @@ add_subdirectory(ultrainio.msig)
 add_subdirectory(ultrainio.sudo)
 add_subdirectory(multi_index_test)
 add_subdirectory(ultrainio.system)
+add_subdirectory(ultrainio.sched)
 add_subdirectory(identity)
 add_subdirectory(stltest)
 add_subdirectory(exchange)
