--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -23,6 +23,7 @@ add_subdirectory(mongo_db_plugin)
 #add_subdirectory(sql_db_plugin)
 add_subdirectory(login_plugin)
 add_subdirectory(sync_net_plugin)
+add_subdirectory(sync_net_api_plugin)
 
 # Forward variables to top level so packaging picks them up
 set(CPACK_DEBIAN_PACKAGE_DEPENDS ${CPACK_DEBIAN_PACKAGE_DEPENDS} PARENT_SCOPE)
