a new proposer/voter selection mechanism
use Fisher-Yates shuffle to select proposer/voter from committee member
detail see: https://github.com/ultrain-os/ultrain-core/issues/23

--- a/consensus/rpos/CMakeLists.txt
+++ b/consensus/rpos/CMakeLists.txt
@@ -2,16 +2,21 @@ file(GLOB HEADERS "include/rpos/*.h")
 add_library( ultrainio_rpos
         src/BlockMsg.cpp
         src/Config.cpp
+        src/FisherYates.cpp
         src/Genesis.cpp
-        src/NodeInfo.cpp
         src/MsgBuilder.cpp
         src/MsgMgr.cpp
         src/Node.cpp
+        src/NodeInfo.cpp
         src/PhaseMsg.cpp
         src/Proof.cpp
+        src/RoleRandom.cpp
+        src/RoleSelection.cpp
         src/Scheduler.cpp
         src/Seed.cpp
-        src/StakeVote.cpp
+        src/StakeVoteBase.cpp
+        src/StakeVoteFactory.cpp
+        src/StakeVoteRandom.cpp
         src/Vrf.cpp
         ${HEADERS} )
 
