Issue#22 replace ed25519 with pbc to implement bls

--- a/crypto/CMakeLists.txt
+++ b/crypto/CMakeLists.txt
@@ -2,7 +2,6 @@ file(GLOB HEADERS "include/crypto/*.h")
 add_library( ultrainio_crypto
         src/Bls.cpp
         src/Digest.cpp
-        src/Ed25519.cpp
         src/PrivateKey.cpp
         src/PublicKey.cpp
         src/Signature.cpp
@@ -10,5 +9,5 @@ add_library( ultrainio_crypto
 
 include_directories( "${PROJECT_SOURCE_DIR}/vendor/boringssl/include" )
 
-target_link_libraries( ultrainio_crypto ultrainio_pbc ultrainio_base fiat crypto )
+target_link_libraries( ultrainio_crypto ultrainio_pbc ultrainio_base crypto )
 target_include_directories( ultrainio_crypto PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include" )
