Revert "Issue#22 replace ed25519 with pbc to implement bls"
This reverts commit 665b8c0bdd0bb0cc921fa9084b9fcf01ab2ce990.

--- a/unittests/crypto/CMakeLists.txt
+++ b/unittests/crypto/CMakeLists.txt
@@ -1,15 +1,6 @@
-#bls
-add_executable( bls_test
-        BlsTest.cpp)
+add_executable( key_test
+        KeyTest.cpp)
 
-target_link_libraries( bls_test ultrainio_crypto )
+target_link_libraries( key_test ultrainio_rpos )
 
-add_test(NAME bls_test COMMAND bls_test WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
-
-#private/public key
-add_executable( pripubkey_test
-        PriPubKeyTest.cpp)
-
-target_link_libraries( pripubkey_test ultrainio_crypto )
-
-add_test(NAME pripubkey_test COMMAND pripubkey_test WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
+add_test(NAME key_test COMMAND key_test WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
