--- a/scripts/ultrainmng/package.json
+++ b/scripts/ultrainmng/package.json
@@ -7,11 +7,14 @@
   },
   "dependencies": {
     "async": "^2.6.1",
+    "axios": "^0.18.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
+    "ini": "^1.3.5",
     "morgan": "~1.9.0",
+    "node-schedule": "^1.3.1",
     "pug": "2.0.0-beta11",
     "u3-utils": "0.0.2",
     "u3.js": "^0.2.5"
