fix compile error on darwin

--- a/crypto/CMakeLists.txt
+++ b/crypto/CMakeLists.txt
@@ -10,5 +10,5 @@ add_library( ultrainio_crypto
 
 include_directories( "${PROJECT_SOURCE_DIR}/vendor/boringssl/include" )
 
-target_link_libraries( ultrainio_crypto ultrainio_pbc ultrainio_base fiat crypto )
+target_link_libraries( ultrainio_crypto ultrainio_pbc ultrainio_base fiat fc)
 target_include_directories( ultrainio_crypto PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include" )
