--- a/unittests/crypto/CMakeLists.txt
+++ b/unittests/crypto/CMakeLists.txt
@@ -7,6 +7,8 @@ FIND_PACKAGE(Boost 1.67 REQUIRED COMPONENTS
 add_executable( bls_test
         BlsTest.cpp)
 
+include_directories ( ${Boost_INCLUDE_DIR} )
+
 target_link_libraries( bls_test ultrainio_crypto )
 
 add_test(NAME bls_test COMMAND bls_test WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
@@ -14,6 +16,8 @@ add_test(NAME bls_test COMMAND bls_test WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
 #private/public key
 add_executable( pripubkey_test
         PriPubKeyTest.cpp)
+
+include_directories ( ${Boost_INCLUDE_DIR} )
 
 target_link_libraries( pripubkey_test ultrainio_crypto )
 
