add performance test for sha256

--- a/tests/crypto/CMakeLists.txt
+++ b/tests/crypto/CMakeLists.txt
@@ -8,3 +8,9 @@ add_executable( ed25519_performance_test
         Ed25519PerformanceTest.cpp)
 
 target_link_libraries( ed25519_performance_test ultrainio_crypto fc)
+
+#Ed25519 performance test
+add_executable( sha256_performance_test
+        SHA256PerformanceTest.cpp)
+
+target_link_libraries( sha256_performance_test fc)
