update Fisher-Yates algorithm
1. calc random number when select each role
2. change voter for each phase

--- a/tests/rpos/CMakeLists.txt
+++ b/tests/rpos/CMakeLists.txt
@@ -1,5 +1,11 @@
 #votersystem
-add_executable( votersystem_test
-        VoterSystemTest.cpp)
+#add_executable( votersystem_test
+#        VoterSystemTest.cpp)
 
-target_link_libraries( votersystem_test ultrainio_rpos )
+#target_link_libraries( votersystem_test ultrainio_rpos )
+
+#FisherYates performance test
+add_executable( fisheryates_performance_test
+        FisherYatesPerformanceTest.cpp )
+
+target_link_libraries( fisheryates_performance_test ultrainio_rpos )
