--- a/Docker/docker-compose-ultrainio1.0.yaml
+++ b/Docker/docker-compose-ultrainio1.0.yaml
@@ -1,29 +1,29 @@
 version: "3"
 
 services:
-  nodeosd:
-    image: eosio/eos:v1.0.1
-    command: /opt/eosio/bin/nodeosd.sh --data-dir /opt/eosio/bin/data-dir -e
-    hostname: nodeosd
+  nodultraind:
+    image: ultrainio/ultrain:v1.0.1
+    command: /opt/ultrainio/bin/nodultraind.sh --data-dir /opt/ultrainio/bin/data-dir -e
+    hostname: nodultraind
     ports:
       - 8888:8888
       - 9876:9876
     expose:
       - "8888"
     volumes:
-      - nodeos-data-volume:/opt/eosio/bin/data-dir
+      - nodultrain-data-volume:/opt/ultrainio/bin/data-dir
 
-  keosd:
-    image: eosio/eos:v1.0.1
-    command: /opt/eosio/bin/keosd --wallet-dir /opt/eosio/bin/data-dir --http-server-address=127.0.0.1:8900
-    hostname: keosd
+  kultraind:
+    image: ultrainio/ultrain:v1.0.1
+    command: /opt/ultrainio/bin/kultraind --wallet-dir /opt/ultrainio/bin/data-dir --http-server-address=127.0.0.1:8900
+    hostname: kultraind
     links:
-      - nodeosd
+      - nodultraind
     volumes:
-      - keosd-data-volume:/opt/eosio/bin/data-dir
+      - kultraind-data-volume:/opt/ultrainio/bin/data-dir
 
 volumes:
- nodeos-data-volume:
+ nodultrain-data-volume:
    external: true
- keosd-data-volume:
+ kultraind-data-volume:
    external: true
