implement random abi/wast/wasm

--- a/contracts/CMakeLists.txt
+++ b/contracts/CMakeLists.txt
@@ -10,6 +10,7 @@ add_subdirectory(libc++)
 add_subdirectory(simple.token)
 add_subdirectory(ultrainio.token)
 add_subdirectory(ultrainio.msig)
+add_subdirectory(ultrainio.rand)
 add_subdirectory(ultrainio.sudo)
 add_subdirectory(multi_index_test)
 add_subdirectory(ultrainio.system)
