--- a/scripts/ultrainmng/package.json
+++ b/scripts/ultrainmng/package.json
@@ -17,6 +17,6 @@
     "node-schedule": "^1.3.1",
     "pug": "2.0.0-beta11",
     "u3-utils": "0.0.2",
-    "u3.js": "^0.2.10"
+    "u3.js": "git://github.com/ultrain-os/u3.js.git#dev"
   }
 }
