update local config

--- a/scripts/ultrainmng/config.ini
+++ b/scripts/ultrainmng/config.ini
@@ -26,5 +26,5 @@ chain_name = 11
 
 ;path = ./config.ini
 path=/root/.local/share/ultrainio/nodultrain/config/config.ini
-;local=true
-local=false
+local=true
+;local=false
