--- a/contracts/CMakeLists.txt
+++ b/contracts/CMakeLists.txt
@@ -17,6 +17,7 @@ add_subdirectory(identity)
 add_subdirectory(stltest)
 add_subdirectory(exchange)
 add_subdirectory(test.inline)
+add_subdirectory(economic)
 
 #add_subdirectory(bancor)
 add_subdirectory(hello)
