--- a/scripts/ultrainmng/package.json
+++ b/scripts/ultrainmng/package.json
@@ -13,6 +13,7 @@
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
     "ini": "^1.3.5",
+    "log4js": "^3.0.6",
     "morgan": "~1.9.0",
     "node-schedule": "^1.3.1",
     "pug": "2.0.0-beta11",
