--- a/scripts/ultrainmng/package.json
+++ b/scripts/ultrainmng/package.json
@@ -9,6 +9,7 @@
     "async": "^2.6.1",
     "axios": "^0.18.0",
     "cookie-parser": "~1.4.3",
+    "deasync": "^0.1.14",
     "debug": "~2.6.9",
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
