--- a/scripts/ultrainmng/package.json
+++ b/scripts/ultrainmng/package.json
@@ -18,6 +18,7 @@
     "morgan": "~1.9.0",
     "node-schedule": "^1.3.1",
     "pug": "2.0.0-beta11",
+    "sleep": "^5.2.3",
     "u3-utils": "0.0.2",
     "u3.js": "git://github.com/ultrain-os/u3.js.git#dev"
   }
