read consensus rand number from db
1. opt ts contract
2. fix memory leak in Random.cpp
3. consensus rand number read from db

--- a/crypto/CMakeLists.txt
+++ b/crypto/CMakeLists.txt
@@ -5,6 +5,7 @@ add_library( ultrainio_crypto
         src/Ed25519.cpp
         src/PrivateKey.cpp
         src/PublicKey.cpp
+        src/Random.cpp
         src/Signature.cpp
         ${HEADERS} )
 
