--- a/p2p/CMakeLists.txt
+++ b/p2p/CMakeLists.txt
@@ -4,5 +4,5 @@ add_library( ultrainio_p2p
         ${HEADERS} )
 
 
-target_link_libraries( ultrainio_p2p appbase net_plugin ultrainio_core)
+target_link_libraries( ultrainio_p2p ultrainio_core)
 target_include_directories( ultrainio_p2p PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include" )
