update startup related logic of ultrainmng

--- a/scripts/ultrainmng/config.ini
+++ b/scripts/ultrainmng/config.ini
@@ -1,29 +1,19 @@
 ;主链请求地址相关配置
 prefix = http://
 endpoint = :8888
-;url=https://developer.ultrain.io/api/remoteEndpoint
 url = http://47.52.43.102:3335/api/remoteEndpoint
-
-;子链http接入
-subchainHttpEndpoint = http://127.0.0.1:8888
 
 ;nodultrain路径
 path=/root/.local/share/ultrainio/nodultrain/config/config.ini
-
-;子链名称
-chain_name =
+nodpath=/root/workspace/ultrain-core/build/programs/nodultrain
+wsspath=/root/workspace/ultrain-core/build/programs/wssultrain
 
 ;localtest标志是否是本地测试
 localtest=true
-;localtest=false
-
-;主链http接入(只有开启localtest才生效）
-;mainchainHttpEndpoint = http://172.16.10.5:9999
-
 
 ;定时时间相关（单位ms）
 blockSyncCycle=*/10 * * * * *
-chainSyncCycle=*/10 * * * * *
-worldstateSyncCycle=*/10 * * * * *
+chainSyncCycle=*/30 * * * * *
+worldstateSyncCycle=*/60 * * * * *
 
 
