add worldstate config logic of ultrainmng

--- a/scripts/ultrainmng/config.ini
+++ b/scripts/ultrainmng/config.ini
@@ -10,6 +10,8 @@ wsspath=/root/workspace/ultrain-core/build/programs/wssultrain
 
 ;localtest标志是否是本地测试
 localtest=true
+;worldstate
+worldstate=false
 
 ;定时时间相关（单位ms）
 blockSyncCycle=*/10 * * * * *
