--- a/scripts/ultrainmng/seedconfig.json
+++ b/scripts/ultrainmng/seedconfig.json
@@ -6,15 +6,17 @@
       "172.17.0.10",
       "172.17.0.11"
     ],
-    "subchainHttpEndpoint": "http://172.16.10.5:8888"
+    "subchainHttpEndpoint": "http://172.16.10.5:8888",
+    "monitorServerEndpoint": "http://172.16.10.7:8078"
   },
   {
     "chainName": "12",
     "seedIp": [
       "172.17.0.30",
-      "172.17.0.11",
-      "172.17.0.12"
+      "172.17.0.31",
+      "172.17.0.32"
     ],
-    "subchainHttpEndpoint": "http://172.16.10.5:8899"
+    "subchainHttpEndpoint": "http://172.16.10.5:8899",
+    "monitorServerEndpoint": "http://172.16.10.8:8078"
   }
 ]
