--- a/scripts/deploy/ultrainmng/config.ini
+++ b/scripts/deploy/ultrainmng/config.ini
@@ -11,7 +11,7 @@ wsspath=/root
 ;localtest标志是否是本地测试
 localtest=true
 ;worldstate
-worldstate=false
+worldstate=true
 
 ;定时时间相关（单位ms）
 blockSyncCycle=*/10 * * * * *
