fix worldstate path issue and upgrade deploy module of ultrainmng

--- a/scripts/ultrainmng/package.json
+++ b/scripts/ultrainmng/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node ./src/SideChainBlockInfoService.js",
-    "deploy": "npx webpack --mode=development"
+    "deploy-dev": "npx webpack --mode=development",
+    "deploy": "npx webpack --mode=production"
   },
   "dependencies": {
     "async": "^2.6.1",
