optimise sync resource logic of ultrainmng

--- a/scripts/deploy/ultrainmng/config.ini
+++ b/scripts/deploy/ultrainmng/config.ini
@@ -17,5 +17,6 @@ worldstate=true
 blockSyncCycle=*/10 * * * * *
 chainSyncCycle=*/30 * * * * *
 worldstateSyncCycle=*/60 * * * * *
+resourceSyncCycle=0 * * * * *
 
 
