--- a/scripts/ultrainmng/config.ini
+++ b/scripts/ultrainmng/config.ini
@@ -13,9 +13,10 @@ localtest=true
 ;worldstate
 worldstate=true
 
-;定时时间相关（单位ms）
+;定时时间相关（单位s）
 blockSyncCycle=*/10 * * * * *
 chainSyncCycle=*/30 * * * * *
 worldstateSyncCycle=*/60 * * * * *
+resourceSyncCycle=*/60 * * * * *
 
 
