add loglevel config and pull block switch of ultrainmng

--- a/scripts/ultrainmng/config.ini
+++ b/scripts/ultrainmng/config.ini
@@ -12,6 +12,9 @@ wsspath=/root/workspace/ultrain-core/build/programs/wssultrain
 localtest=true
 ;worldstate
 worldstate=true
+wsSyncBlock=false
+
+logLevel=info
 
 ;定时时间相关（单位s）
 blockSyncCycle=*/10 * * * * *
