fix shell path issue on production env of ultraimmng

--- a/scripts/deploy/ultrainmng/config.ini
+++ b/scripts/deploy/ultrainmng/config.ini
@@ -9,7 +9,7 @@ nodpath=/root
 wsspath=/root
 
 ;localtest标志是否是本地测试
-localtest=true
+localtest=false
 ;worldstate
 worldstate=true
 wsSyncBlock=false
