--- a/consensus/rpos/CMakeLists.txt
+++ b/consensus/rpos/CMakeLists.txt
@@ -2,6 +2,7 @@ file(GLOB HEADERS "include/rpos/*.h")
 
 add_library( ultrainio_rpos
         src/BlockMsgPool.cpp
+        src/BlsVoterSet.cpp
         src/Config.cpp
         src/EvilType.cpp
         src/FisherYates.cpp
