--- a/scripts/ultrainmng/config.ini
+++ b/scripts/ultrainmng/config.ini
@@ -16,11 +16,13 @@ wsSyncBlock=false
 
 logLevel=info
 syncBlockRatio=0.2
+monitor=true
 
 ;定时时间相关（单位s）
 blockSyncCycle=*/10 * * * * *
 chainSyncCycle=*/30 * * * * *
 worldstateSyncCycle=*/60 * * * * *
 resourceSyncCycle=*/60 * * * * *
+monitorSyncCycle=*/10 * * * * *
 
 
