--- a/scripts/ultrainmng/package.json
+++ b/scripts/ultrainmng/package.json
@@ -20,6 +20,7 @@
     "log4js": "^3.0.6",
     "morgan": "~1.9.0",
     "node-schedule": "^1.3.1",
+    "public-ip": "^3.0.0",
     "pug": "2.0.0-beta11",
     "random-lib": "^3.0.0",
     "sleep": "^5.2.3",
