upload subchain deploy file hash info to monitor server

--- a/scripts/ultrainmng/config.ini
+++ b/scripts/ultrainmng/config.ini
@@ -7,6 +7,7 @@ url = http://47.52.43.102:3335/api/remoteEndpoint
 path=/root/.local/share/ultrainio/nodultrain/config/config.ini
 nodpath=/root/workspace/ultrain-core/build/programs/nodultrain
 wsspath=/root/workspace/ultrain-core/build/programs/wssultrain
+mngpath=/root/workspace/ultrain-core/scripts/ultrainmng/src
 
 ;localtest标志是否是本地测试
 localtest=true
@@ -15,8 +16,8 @@ worldstate=true
 wsSyncBlock=false
 
 logLevel=info
-syncBlockRatio=0.2
-monitor=true
+syncBlockRatio=0.1
+monitor=false
 
 ;定时时间相关（单位s）
 blockSyncCycle=*/10 * * * * *
