--- a/scripts/deploy/ultrainmng/config.ini
+++ b/scripts/deploy/ultrainmng/config.ini
@@ -7,6 +7,7 @@ url = http://47.52.43.102:3335/api/remoteEndpoint
 path=/root/.local/share/ultrainio/nodultrain/config/config.ini
 nodpath=/root
 wsspath=/root
+mngpath=/root/ultrainmng/src
 
 ;localtest标志是否是本地测试
 localtest=false
