--- a/unittests/rpos/CMakeLists.txt
+++ b/unittests/rpos/CMakeLists.txt
@@ -55,3 +55,13 @@ include_directories ( ${Boost_INCLUDE_DIR} )
 target_link_libraries( blsvoterset_test ultrainio_rpos )
 
 add_test(NAME blsvoterset_test COMMAND blsvoterset_test WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
+
+### CommitteeSet
+add_executable( committeeset_test_suite
+        CommitteeSetTest.cpp)
+
+include_directories ( ${Boost_INCLUDE_DIR} )
+
+target_link_libraries( committeeset_test_suite ultrainio_rpos )
+
+add_test(NAME committeeset_test_suite COMMAND committeeset_test_suite WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
