--- a/contracts/CMakeLists.txt
+++ b/contracts/CMakeLists.txt
@@ -18,7 +18,7 @@ add_subdirectory(identity)
 add_subdirectory(stltest)
 add_subdirectory(exchange)
 add_subdirectory(test.inline)
-add_subdirectory(economic)
+add_subdirectory(merkle_proof)
 
 #add_subdirectory(bancor)
 add_subdirectory(hello)
