--- a/unittests/CMakeLists.txt
+++ b/unittests/CMakeLists.txt
@@ -1,4 +1,5 @@
 add_subdirectory( base )
 add_subdirectory( core )
 add_subdirectory( crypto )
+add_subdirectory( lightclient )
 add_subdirectory( rpos )
