--- a/lightclient/CMakeLists.txt
+++ b/lightclient/CMakeLists.txt
@@ -2,11 +2,13 @@ file(GLOB HEADERS "include/lightclient/*.h")
 
 add_library( ultrainio_lightclient
         src/BlsVoterSet.cpp
-        src/Checkpoint.cpp
+        src/CheckPoint.cpp
         src/CommitteeInfo.cpp
         src/CommitteeSet.cpp
         src/ConfirmPoint.cpp
         src/EpochEndPoint.cpp
+        src/LightClient.cpp
+        src/LightClientMgr.cpp
         ${HEADERS} )
 
 target_link_libraries( ultrainio_lightclient ultrainio_core )
