--- a/scripts/ultrainmng/package.json
+++ b/scripts/ultrainmng/package.json
@@ -14,6 +14,7 @@
     "cookie-parser": "~1.4.3",
     "deasync": "^0.1.14",
     "debug": "~2.6.9",
+    "download-to-file": "^2.1.0",
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
     "ini": "^1.3.5",
