--- a/scripts/ultrainmng/seedconfig.json
+++ b/scripts/ultrainmng/seedconfig.json
@@ -4,6 +4,10 @@
     "seedIp": [
       "172.17.0.17"
     ],
+    "peerKeys": [
+      "UTR7Z3j9M7dcXfrBGcBbENQphuG8hAEYyPueT7cc8XzKgzymppJ9Y",
+      "UTR6DQVtj2frjePAFBiLnT288KfG3HAiMHCmbK9YzcHEaJQEmvyeU"
+    ],
     "subchainHttpEndpoint": "http://172.16.10.5:8888",
     "monitorServerEndpoint": "http://172.16.10.7:8078"
   },
@@ -11,6 +15,10 @@
     "chainName": "12",
     "seedIp": [
       "172.17.0.24"
+    ],
+    "peerKeys": [
+      "UTR7Z3j9M7dcXfrBGcBbENQphuG8hAEYyPueT7cc8XzKgzymppJ9Y",
+      "UTR6DQVtj2frjePAFBiLnT288KfG3HAiMHCmbK9YzcHEaJQEmvyeU"
     ],
     "subchainHttpEndpoint": "http://172.16.10.5:8899",
     "monitorServerEndpoint": "http://172.16.10.8:8078"
