--- a/scripts/deploy/ultrainmng/config.ini
+++ b/scripts/deploy/ultrainmng/config.ini
@@ -14,13 +14,13 @@ localtest=false
 ;worldstate
 worldstate=true
 wsSyncBlock=false
-monitor=false
+monitor=true
 
 ;定时时间相关（单位ms）
 blockSyncCycle=*/10 * * * * *
 chainSyncCycle=*/30 * * * * *
 worldstateSyncCycle=*/60 * * * * *
 resourceSyncCycle=0 * * * * *
-monitorSyncCycle=*/10 * * * * *
+monitorSyncCycle=*/30 * * * * *
 
 
